--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
+    "motion": "^12.0.5",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18"
@@ -24,8 +26,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.23",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "wrangler": "^3.105.1"
   }
