--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.6",
     "@tailwindcss/postcss": "^4.0.0",
+    "@tiptap/pm": "^2.11.3",
+    "@tiptap/react": "^2.11.3",
+    "@tiptap/starter-kit": "^2.11.3",
     "motion": "^12.0.5",
     "next": "14.2.23",
     "react": "^18",
@@ -21,6 +27,8 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250124.3",
     "@opennextjs/cloudflare": "^0.3.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
