--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
+    "react-fast-marquee": "^1.6.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
