--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@tailwindcss/postcss": "^4.0.0",
     "@tiptap/extension-image": "^2.11.9",
+    "@tiptap/extension-link": "^2.26.1",
     "@tiptap/pm": "^2.11.3",
     "@tiptap/react": "^2.11.3",
     "@tiptap/starter-kit": "^2.11.3",
@@ -41,6 +42,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "react-fast-marquee": "^1.6.5",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
